--- a/src/app/barcode/barcode.page.html
+++ b/src/app/barcode/barcode.page.html
@@ -12,16 +12,16 @@
   <ion-grid>
     <ion-row>
       <ion-col size="3">
-        <ion-button expand="full" size="small" color="success" (click)="encodeText(cardNumber)"><ion-icon name="qr-code-outline"></ion-icon></ion-button>
+        <ion-button shape="round" expand="block" size="small" color="success" (click)="encodeText(cardNumber)"><ion-icon name="qr-code-outline"></ion-icon></ion-button>
       </ion-col>
       <ion-col size="3">
-        <ion-button expand="full" size="small" color="success" href="https://{{web}}"><ion-icon name="globe-outline"></ion-icon></ion-button>
+        <ion-button shape="round" expand="block" size="small" color="success" href="https://{{web}}"><ion-icon name="globe-outline"></ion-icon></ion-button>
       </ion-col>
       <ion-col size="3">
-        <ion-button expand="full" size="small" color="success" (click)="goToEdit()"><ion-icon name="create-outline"></ion-icon></ion-button>
+        <ion-button shape="round" expand="block" size="small" color="success" (click)="goToEdit()"><ion-icon name="create-outline"></ion-icon></ion-button>
       </ion-col>
       <ion-col size="3">
-        <ion-button expand="full" size="small" color="success" (click)="presentModal(card.Id)"><ion-icon name="close-outline"></ion-icon></ion-button> 
+        <ion-button shape="round" expand="block" size="small" color="success" (click)="presentModal(card.Id)"><ion-icon name="close-outline"></ion-icon></ion-button> 
       </ion-col>
     </ion-row>
   </ion-grid>
