--- a/src/app/edit-card/edit-card.page.html
+++ b/src/app/edit-card/edit-card.page.html
@@ -12,7 +12,7 @@
     <ion-item color="default">{{name}}</ion-item>
     <ion-card-content>
       <ion-input  position="floating" [(ngModel)]="CardNumber"></ion-input>
-      <ion-button color="success" size="small"  expand="full" (click)="edit()"><p style="zoom:1.4">Update </p></ion-button>
+      <ion-button color="success" shape="round"  expand="block" (click)="edit()"><ion-icon name="create-outline"></ion-icon>Update</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
