--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,17 +1,32 @@
 <ion-header>
   <ion-toolbar color="default">
-    <ion-chip slot="end" color="success">Cardit | LogIn | Register</ion-chip>
+    <ion-chip slot="end" color="success">CardIt</ion-chip>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color="default">
+  <div style="height:50%">
+    <ion-img [src]="imgPath"></ion-img>
+  </div>
+  <br/>
+  <br/>
   <ion-card color="default" class="container">
     <ion-card-title style="text-align: center;"> Register | Login</ion-card-title>
     <ion-card-subtitle>
-      <ion-button color="success" expand="full" (click)="Register()">Register</ion-button>
-    </ion-card-subtitle>
-    <ion-card-subtitle>
-      <ion-button color="success" expand="full" (click)="LogIn()">Log In</ion-button>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-button color="success" shape="round" expand="block" (click)="Register()">
+              <ion-icon color="light" name="person-add-outline"></ion-icon>Register</ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button color="success" shape="round" expand="block" (click)="LogIn()">
+              <ion-icon color="light" name="log-in-outline"></ion-icon>Log In</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      
+      
     </ion-card-subtitle>
   </ion-card>
 </ion-content>
