--- a/src/app/log-in/log-in.page.html
+++ b/src/app/log-in/log-in.page.html
@@ -3,16 +3,20 @@
     <ion-buttons slot="start">
       <ion-back-button color="success"></ion-back-button>
     </ion-buttons>
-    <ion-chip slot="end" color="success">CardIt | LogIn</ion-chip>
+    <ion-chip slot="end" color="success">CardIt | Log In</ion-chip>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color="default">
-  <ion-card colr="default">
+  <div style="height:50%">
+    <ion-img [src]="imgPath"></ion-img>
+  </div>
+  <ion-card color="default">
     <ion-card-content>
       <ion-input position="floating" placeholder="Email" [(ngModel)]="email"></ion-input>
       <ion-input type="password" position="floating" placeholder="Password" [(ngModel)]="password"></ion-input>
-      <ion-button color="success" size="small"  expand="full" (click)="LogIn()"><p style="zoom:1.4">log In </p></ion-button>
+      <ion-button color="success" shape="round"  expand="block" (click)="LogIn()">
+        <ion-icon color="light" name="log-in-outline"></ion-icon><p style="zoom:1.4">Log In </p></ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
