--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -8,12 +8,16 @@
 </ion-header>
 
 <ion-content color="default">
+  <div style="height:50%">
+    <ion-img [src]="imgPath"></ion-img>
+  </div>
   <ion-card color="default">
     <ion-card-content>
       <ion-input position="floating" placeholder="Email" [(ngModel)]="email"></ion-input>
       <ion-input type="password" position="floating" placeholder="Password" [(ngModel)]="password"></ion-input>
       <ion-input type="password" position="floating" placeholder="Confirm Password" [(ngModel)]="confirmPassword"></ion-input>
-      <ion-button color="success" size="small"  expand="full" (click)="Register()"><p style="zoom:1.4">Register </p></ion-button>
+      <ion-button color="success" shape="round"  expand="block" (click)="Register()">
+        <ion-icon color="light" name="person-add-outline"></ion-icon>Register</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
